# nkutils

./: README.md  main.py  pyproject.toml
src/nkutils/: __init__.py  __main__.py
src/nkutils/math/: operations.py
