[project]
name = "nkutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
draw_car = 'nkutils:draw_car'
num_print = 'nkutils.math.operations:num'